tests/errors/regex_invalid.lq
# An uncaught invalid regex must fail cleanly (runtime error), not crash.
regex.find("[a-", "text")
